--- a/MoppApp/MoppApp/Container.storyboard
+++ b/MoppApp/MoppApp/Container.storyboard
@@ -664,7 +664,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="252" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="751" text="MARI MAASIKAS,9800984323" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jap-nW-m3U">
-                                                    <rect key="frame" x="45" y="11" width="293" height="20"/>
+                                                    <rect key="frame" x="45" y="11" width="290" height="20"/>
                                                     <fontDescription key="fontDescription" name="RobotoCondensed-Bold" family="Roboto Condensed" pointSize="17"/>
                                                     <color key="textColor" red="0.35686274509999999" green="0.35686274509999999" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -688,8 +688,8 @@
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Signed 12.08.2017, 13:22" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="e2G-rm-jEh">
-                                                    <rect key="frame" x="45" y="32" width="215" height="16"/>
-                                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
+                                                    <rect key="frame" x="48" y="32" width="207" height="13"/>
+                                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
                                                     <color key="textColor" red="0.60860168150000005" green="0.60860168150000005" blue="0.60860168150000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -698,17 +698,17 @@
                                                 <constraint firstAttribute="trailing" secondItem="L7d-1E-zfP" secondAttribute="trailing" constant="16" id="JcS-Lr-nvW"/>
                                                 <constraint firstItem="F8O-EX-0Mm" firstAttribute="centerY" secondItem="1mC-Uj-fBy" secondAttribute="centerY" constant="-4" id="M2L-gb-Tfj"/>
                                                 <constraint firstItem="e2G-rm-jEh" firstAttribute="top" secondItem="jap-nW-m3U" secondAttribute="bottom" constant="1" id="P89-Ap-38c"/>
-                                                <constraint firstItem="e2G-rm-jEh" firstAttribute="leading" secondItem="1mC-Uj-fBy" secondAttribute="leading" constant="45" id="Ubh-qs-LRF"/>
+                                                <constraint firstItem="e2G-rm-jEh" firstAttribute="leading" secondItem="1mC-Uj-fBy" secondAttribute="leading" constant="48" id="Ubh-qs-LRF"/>
                                                 <constraint firstAttribute="trailing" secondItem="F8O-EX-0Mm" secondAttribute="trailing" constant="7" id="WYN-M6-bUU"/>
                                                 <constraint firstItem="jap-nW-m3U" firstAttribute="top" secondItem="1mC-Uj-fBy" secondAttribute="topMargin" id="ZLn-s5-EWC"/>
                                                 <constraint firstItem="jap-nW-m3U" firstAttribute="leading" secondItem="oY9-9V-Hz1" secondAttribute="trailing" constant="8" id="a2k-Xf-Vfy"/>
-                                                <constraint firstAttribute="bottom" secondItem="e2G-rm-jEh" secondAttribute="bottom" constant="13" id="bvj-Gb-Ixm"/>
+                                                <constraint firstAttribute="bottom" secondItem="e2G-rm-jEh" secondAttribute="bottom" constant="16" id="bvj-Gb-Ixm"/>
                                                 <constraint firstItem="oY9-9V-Hz1" firstAttribute="leading" secondItem="1mC-Uj-fBy" secondAttribute="leadingMargin" id="dRq-jx-Eww"/>
                                                 <constraint firstItem="L7d-1E-zfP" firstAttribute="leading" secondItem="1mC-Uj-fBy" secondAttribute="leading" constant="16" id="fO1-vC-o1z"/>
                                                 <constraint firstItem="oY9-9V-Hz1" firstAttribute="top" secondItem="1mC-Uj-fBy" secondAttribute="topMargin" id="gIf-Kd-F93"/>
                                                 <constraint firstAttribute="bottom" secondItem="L7d-1E-zfP" secondAttribute="bottom" id="mMi-cN-2f5"/>
-                                                <constraint firstAttribute="trailing" secondItem="e2G-rm-jEh" secondAttribute="trailing" constant="115" id="xny-Xo-NmA"/>
-                                                <constraint firstAttribute="trailing" secondItem="jap-nW-m3U" secondAttribute="trailing" constant="37" id="zyL-Le-hRD"/>
+                                                <constraint firstAttribute="trailing" secondItem="e2G-rm-jEh" secondAttribute="trailing" constant="120" id="xny-Xo-NmA"/>
+                                                <constraint firstAttribute="trailing" secondItem="jap-nW-m3U" secondAttribute="trailing" constant="40" id="zyL-Le-hRD"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -879,7 +879,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="252" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="751" text="MARI MAASIKAS,9800984323" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OwN-Y6-Aj6">
-                                                    <rect key="frame" x="45" y="11" width="238" height="20"/>
+                                                    <rect key="frame" x="45" y="8" width="235" height="20"/>
                                                     <fontDescription key="fontDescription" name="RobotoCondensed-Bold" family="Roboto Condensed" pointSize="17"/>
                                                     <color key="textColor" red="0.35686274509999999" green="0.35686274509999999" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -892,13 +892,13 @@
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Signed 12.08.2017, 13:22" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="rC8-67-9fN">
-                                                    <rect key="frame" x="45" y="29" width="208" height="17"/>
-                                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
+                                                    <rect key="frame" x="48" y="28" width="207" height="18"/>
+                                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
                                                     <color key="textColor" red="0.60860168150000005" green="0.60860168150000005" blue="0.60860168150000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NhU-k0-Tv1">
-                                                    <rect key="frame" x="279" y="12" width="72" height="30"/>
+                                                    <rect key="frame" x="272" y="12" width="79" height="30"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <state key="normal" title="Added"/>
                                                     <connections>
@@ -912,17 +912,17 @@
                                                 <constraint firstAttribute="bottom" secondItem="eSy-xJ-zZ8" secondAttribute="bottom" id="8EK-8b-v8a"/>
                                                 <constraint firstItem="OwN-Y6-Aj6" firstAttribute="leading" secondItem="kGJ-Wd-I4U" secondAttribute="trailing" constant="8" id="CmS-jl-ja8"/>
                                                 <constraint firstItem="kGJ-Wd-I4U" firstAttribute="top" secondItem="Bbt-ik-4qu" secondAttribute="topMargin" id="Gy9-Wj-I6e"/>
-                                                <constraint firstItem="OwN-Y6-Aj6" firstAttribute="top" secondItem="Bbt-ik-4qu" secondAttribute="top" constant="11" id="Is3-fR-gaW"/>
+                                                <constraint firstItem="OwN-Y6-Aj6" firstAttribute="top" secondItem="Bbt-ik-4qu" secondAttribute="top" constant="8" id="Is3-fR-gaW"/>
                                                 <constraint firstAttribute="trailing" secondItem="NhU-k0-Tv1" secondAttribute="trailing" constant="24" id="PLK-CA-8kd"/>
-                                                <constraint firstItem="rC8-67-9fN" firstAttribute="leading" secondItem="Bbt-ik-4qu" secondAttribute="leading" constant="45" id="S9R-Bn-KPw"/>
+                                                <constraint firstItem="rC8-67-9fN" firstAttribute="leading" secondItem="Bbt-ik-4qu" secondAttribute="leading" constant="48" id="S9R-Bn-KPw"/>
                                                 <constraint firstItem="kGJ-Wd-I4U" firstAttribute="leading" secondItem="Bbt-ik-4qu" secondAttribute="leadingMargin" id="Sc3-rN-pGc"/>
                                                 <constraint firstItem="eSy-xJ-zZ8" firstAttribute="top" secondItem="rC8-67-9fN" secondAttribute="bottom" constant="8" id="SmP-Ic-W05"/>
-                                                <constraint firstAttribute="trailing" secondItem="rC8-67-9fN" secondAttribute="trailing" constant="122" id="VCW-Ft-SZJ"/>
-                                                <constraint firstItem="NhU-k0-Tv1" firstAttribute="leading" secondItem="OwN-Y6-Aj6" secondAttribute="trailing" constant="-4" id="ZcY-aP-lXc"/>
+                                                <constraint firstAttribute="trailing" secondItem="rC8-67-9fN" secondAttribute="trailing" constant="120" id="VCW-Ft-SZJ"/>
+                                                <constraint firstItem="NhU-k0-Tv1" firstAttribute="leading" secondItem="OwN-Y6-Aj6" secondAttribute="trailing" constant="-8" id="ZcY-aP-lXc"/>
                                                 <constraint firstAttribute="bottom" secondItem="NhU-k0-Tv1" secondAttribute="bottom" constant="13" id="fNN-1d-8nn"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="OwN-Y6-Aj6" secondAttribute="trailing" constant="77" id="kaT-ZM-uaY"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="OwN-Y6-Aj6" secondAttribute="trailing" constant="80" id="kaT-ZM-uaY"/>
                                                 <constraint firstItem="NhU-k0-Tv1" firstAttribute="top" secondItem="Bbt-ik-4qu" secondAttribute="top" constant="12" id="mmz-Vl-O03"/>
-                                                <constraint firstItem="rC8-67-9fN" firstAttribute="top" secondItem="OwN-Y6-Aj6" secondAttribute="bottom" constant="-2" id="sdq-ur-9hb"/>
+                                                <constraint firstItem="rC8-67-9fN" firstAttribute="top" secondItem="OwN-Y6-Aj6" secondAttribute="bottom" id="sdq-ur-9hb"/>
                                                 <constraint firstAttribute="trailing" secondItem="eSy-xJ-zZ8" secondAttribute="trailing" constant="16" id="snb-YD-GmP"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -950,7 +950,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="252" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="751" text="MARI MAASIKAS,9800984323" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3zq-4L-1K7">
-                                                    <rect key="frame" x="45" y="11" width="283" height="20"/>
+                                                    <rect key="frame" x="45" y="11" width="282" height="20"/>
                                                     <fontDescription key="fontDescription" name="RobotoCondensed-Bold" family="Roboto Condensed" pointSize="17"/>
                                                     <color key="textColor" red="0.35686274509999999" green="0.35686274509999999" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -974,8 +974,8 @@
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Signed 12.08.2017, 13:22" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="Dna-V9-HXN">
-                                                    <rect key="frame" x="45" y="32" width="215" height="16"/>
-                                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
+                                                    <rect key="frame" x="48" y="32" width="207" height="13"/>
+                                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
                                                     <color key="textColor" red="0.60860168150000005" green="0.60860168150000005" blue="0.60860168150000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -983,16 +983,16 @@
                                             <constraints>
                                                 <constraint firstItem="dDJ-k2-19D" firstAttribute="top" secondItem="hua-iu-fk8" secondAttribute="topMargin" id="8MT-bu-TRr"/>
                                                 <constraint firstItem="Dna-V9-HXN" firstAttribute="top" secondItem="3zq-4L-1K7" secondAttribute="bottom" constant="1" id="AgE-a8-65j"/>
-                                                <constraint firstItem="Dna-V9-HXN" firstAttribute="leading" secondItem="hua-iu-fk8" secondAttribute="leading" constant="45" id="K7T-IG-zu4"/>
+                                                <constraint firstItem="Dna-V9-HXN" firstAttribute="leading" secondItem="hua-iu-fk8" secondAttribute="leading" constant="48" id="K7T-IG-zu4"/>
                                                 <constraint firstAttribute="trailing" secondItem="Zh4-up-bW7" secondAttribute="trailing" constant="16" id="Nbw-1T-z7f"/>
                                                 <constraint firstItem="3zq-4L-1K7" firstAttribute="top" secondItem="hua-iu-fk8" secondAttribute="topMargin" id="Qcu-ag-tHF"/>
                                                 <constraint firstItem="Zh4-up-bW7" firstAttribute="leading" secondItem="hua-iu-fk8" secondAttribute="leading" constant="16" id="Rfd-YU-ac3"/>
                                                 <constraint firstAttribute="bottom" secondItem="Zh4-up-bW7" secondAttribute="bottom" id="Rga-cB-gEu"/>
                                                 <constraint firstItem="3zq-4L-1K7" firstAttribute="leading" secondItem="dDJ-k2-19D" secondAttribute="trailing" constant="8" id="ZKg-Sl-mqb"/>
-                                                <constraint firstAttribute="trailing" secondItem="Dna-V9-HXN" secondAttribute="trailing" constant="115" id="aZf-GJ-Ite"/>
-                                                <constraint firstAttribute="trailing" secondItem="3zq-4L-1K7" secondAttribute="trailing" constant="47" id="dRV-hZ-Ujp"/>
+                                                <constraint firstAttribute="trailing" secondItem="Dna-V9-HXN" secondAttribute="trailing" constant="120" id="aZf-GJ-Ite"/>
+                                                <constraint firstAttribute="trailing" secondItem="3zq-4L-1K7" secondAttribute="trailing" constant="48" id="dRV-hZ-Ujp"/>
                                                 <constraint firstItem="xNB-Fp-5xD" firstAttribute="centerY" secondItem="hua-iu-fk8" secondAttribute="centerY" constant="-4" id="dRc-rb-ePx"/>
-                                                <constraint firstAttribute="bottom" secondItem="Dna-V9-HXN" secondAttribute="bottom" constant="13" id="eYU-La-i8a"/>
+                                                <constraint firstAttribute="bottom" secondItem="Dna-V9-HXN" secondAttribute="bottom" constant="16" id="eYU-La-i8a"/>
                                                 <constraint firstItem="dDJ-k2-19D" firstAttribute="leading" secondItem="hua-iu-fk8" secondAttribute="leadingMargin" id="x0c-Q4-aOX"/>
                                                 <constraint firstAttribute="trailing" secondItem="xNB-Fp-5xD" secondAttribute="trailing" constant="7" id="zxS-WL-I8T"/>
                                             </constraints>
