--- a/MoppApp/MoppApp/Settings.storyboard
+++ b/MoppApp/MoppApp/Settings.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Sh7-45-xtX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.13.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Sh7-45-xtX">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.9"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -174,6 +174,29 @@
                                             <outlet property="titleLabel" destination="tlZ-VA-EQr" id="DdD-Rr-Wpj"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SettingsGroupSeparator" rowHeight="50" id="n8H-Rz-l7f">
+                                        <rect key="frame" x="0.0" y="407" width="375" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="n8H-Rz-l7f" id="YhD-Qg-6lL">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KCB-ob-gLT">
+                                                    <rect key="frame" x="0.0" y="16" width="375" height="1"/>
+                                                    <color key="backgroundColor" name="MoppBackgroundLine"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="zBo-Ti-DRu"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="KCB-ob-gLT" firstAttribute="top" secondItem="YhD-Qg-6lL" secondAttribute="top" constant="16" id="M9O-ej-g7P"/>
+                                                <constraint firstAttribute="bottom" secondItem="KCB-ob-gLT" secondAttribute="bottom" constant="8" id="PDo-Fq-o1e"/>
+                                                <constraint firstItem="KCB-ob-gLT" firstAttribute="leading" secondItem="YhD-Qg-6lL" secondAttribute="leading" id="f5E-15-MoN"/>
+                                                <constraint firstAttribute="trailing" secondItem="KCB-ob-gLT" secondAttribute="trailing" id="iP4-RB-hVd"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="Sh7-45-xtX" id="fHf-VL-4F7"/>
@@ -298,7 +321,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V5V-vt-c1C">
-                                <rect key="frame" x="315" y="26" width="44" height="44"/>
+                                <rect key="frame" x="315" y="26.5" width="44" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="44" id="Frc-B3-DK3"/>
                                     <constraint firstAttribute="height" constant="44" id="Nuo-lm-Iwx"/>
@@ -310,7 +333,7 @@
                                 </connections>
                             </button>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6hY-3L-cQP">
-                                <rect key="frame" x="0.0" y="99" width="375" height="568"/>
+                                <rect key="frame" x="0.0" y="99.5" width="375" height="567.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="delegate" destination="KVj-nF-a9C" id="V4b-GS-nVJ"/>
@@ -342,7 +365,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="DismissPopup" width="25" height="25"/>
+        <image name="DismissPopup" width="40" height="40"/>
+        <namedColor name="MoppBackgroundLine">
+            <color red="0.87058823529411766" green="0.89411764705882357" blue="0.9137254901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="MoppLabel">
             <color red="0.45882352941176469" green="0.47058823529411764" blue="0.4823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
@@ -350,7 +376,7 @@
             <color red="0.21176470588235294" green="0.21568627450980393" blue="0.22352941176470589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="MoppTitle">
-            <color red="0.015686274510000001" green="0.1176470588" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.015686274509803921" green="0.11764705882352941" blue="0.25882352941176473" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
